--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,23 +17,22 @@
             <%= link_to(post.user.name, "/users/#{post.user.id}") %>
           </div>
         </div>
-          <div class="post-content">
-            <%= link_to(post.content, "/posts/#{post.id}") %>
-          </div>
+        <div class="post-content">
+          <%= link_to(post.content, "/posts/#{post.id}") %>
+        </div>
         <div class="post-like">
           <% if Like.find_by(user_id: @current_user.id, post_id: post.id) %>
-            <%= link_to("/likes/#{post.id}/destroy", method: :post) do %>
+            <%= link_to(destroy_like_path(post.id), method: :post, class: "like-button liked", data: { resource_id: post.id, resource_type: "post" }) do %>
               <span class="fa fa-heart liked-btn"></span>
             <% end %>
           <% else %>
-            <%= link_to("/likes/#{post.id}/create", method: :post) do %>
+            <%= link_to(create_like_path(post.id), method: :post, class: "like-button unliked", data: { resource_id: post.id, resource_type: "post" }) do %>
               <span class="fa fa-heart unliked-btn"></span>
             <% end %>
           <% end %>
-          <%= Like.where(post_id: post.id).count %>
+          <%= post.likes_count %>
         </div>
       </div>
     <% end %>
   </div>
-
 </div>
