--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -6,8 +6,8 @@
         <%= link_to(@user.name, "/users/#{@user.id}") %>
       </div>
       <div class="image-contents">
-        <audio src="<%= "#{@music.file}" %>" controls="">
-          <a src="<%= "#{@music.file}" %>">ダウンロード</a>
+        <audio src="<%= @music.file %>" controls="">
+          <a href="<%= @music.file %>">ダウンロード</a>
         </audio>
 
         <div class="image-body">
@@ -26,20 +26,20 @@
       </div>
 
       <% if Like.find_by(user_id: @current_user.id, music_id: @music.id) %>
-        <%= link_to("/likes/#{@music.id}/music_destroy", method: :post) do %>
+        <%= link_to(music_destroy_like_path(@music.id), method: :post, class: "like-button liked", data: { resource_id: @music.id, resource_type: "music" }) do %>
           <span class="fa fa-heart liked-btn"></span>
         <% end %>
       <% else %>
-        <%= link_to("/likes/#{@music.id}/music_create", method: :post) do %>
+        <%= link_to(music_create_like_path(@music.id), method: :post, class: "like-button unliked", data: { resource_id: @music.id, resource_type: "music" }) do %>
           <span class="fa fa-heart unliked-btn"></span>
         <% end %>
       <% end %>
 
-      <%= @likes_count %>
+      <%= @music.likes_count %>
       <% if @music.user_id == @current_user.id %>
         <div class="post-menus">
-          <%= link_to("編集", "/musics/#{@music.id}/edit") %>
-          <%= link_to("削除", "/musics/#{@music.id}/destroy", {method: "post"}) %>
+          <%= link_to("編集", edit_music_path(@music.id)) %>
+          <%= link_to("削除", music_path(@music.id), method: :delete, data: { confirm: "本当に削除しますか？" }) %>
         </div>
       <% end %>
     </div>
