--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -29,11 +29,11 @@
 
         <div class="post-like">
           <% if Like.find_by(user_id: @current_user.id, image_id: image.id) %>
-            <%= link_to("/likes/#{image.id}/image_destroy", method: :post) do %>
+            <%= link_to("/likes/#{image.id}/image_destroy", method: :post, class: "like-button liked", data: { resource_id: @image.id, resource_type: "image" }) do %>
               <span class="fa fa-heart liked-btn"></span>
             <% end %>
           <% else %>
-            <%= link_to("/likes/#{image.id}/image_create", method: :post) do %>
+            <%= link_to("/likes/#{image.id}/image_create", method: :post, class: "like-button unliked", data: { resource_id: @image.id, resource_type: "image" }) do %>
               <span class="fa fa-heart unliked-btn"></span>
             <% end %>
           <% end %>
