--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
           </li>
         <% else %>
           <li>
-            <%= link_to("Fair Appとは", "/about") %>
+            <%= link_to("Wibluとは", "/about") %>
           </li>
           <li>
            <%= link_to("新規登録", "/signup") %>
