--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,7 @@
       </div>
     <% end %>
     
+    <% if @current_user %>
     <div class="side-contents">
       <aside>
         <div class="sidebar">
@@ -108,6 +109,7 @@
           </nav>
         </div>
       </aside>
+      <% end %>
     </div>
     <div class="body-wrapper">
       <%= yield %>
