--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
                 <a href="/musics">音楽</a>
               </li>
               <li>
-                <a href="/images">画像</a>
+                <a href="/images">イラスト</a>
               </li>
               <li>
                 <a href="/movies" >MV</a>
@@ -91,7 +91,7 @@
                 <a href="/musics/new">音楽</a>
               </li>
               <li>
-                <a href="/images/new">画像</a>
+                <a href="/images/new">イラスト</a>
               </li>
               <li class="border-bottom">
                 <a href="/movies/new">MV</a>
