--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
               <span class="fa fa-heart unliked-btn"></span>
             <% end %>
           <% end %>
-          <%= post.likes_count %>
+          <%= Like.where(post_id: post.id).count %>
         </div>
       </div>
     <% end %>
