--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,11 +27,11 @@
           <span class="fa fa-heart unliked-btn"></span>
         <% end %>
       <% end %>
-      <%= @likes_count %>
+      <%= Like.where(post_id: @post.id).count %>
       <% if @post.user_id == @current_user.id %>
         <div class="post-menus">
-          <%= link_to("編集", edit_post_path(@post.id)) %>
-          <%= link_to("削除", post_path(@post.id), method: :delete) %>
+          <%= link_to("編集", "/posts/#{@post.id}/edit") %>
+          <%= link_to("削除", "/posts/#{@post.id}/destroy") %>
         </div>
       <% end %>
     </div>
