--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,12 @@
           </div>
         </div>
         <div class="post-content">
-          <%= link_to(post.content, "/posts/#{post.id}") %>
+          <div>
+            <%= link_to(post.title, "/posts/#{post.id}") %>
+          </div>
+          <div>
+            <%= link_to(post.content, "/posts/#{post.id}") %>
+          </div>
         </div>
         <div class="post-like">
           <% if Like.find_by(user_id: @current_user.id, post_id: post.id) %>
