--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -10,7 +10,7 @@
         </div>
       <% end %>
         <p>タイトル</p>
-        <textarea name="content"><%= @post.title %></textarea>
+        <textarea name="title"><%= @post.title %></textarea>
         <p>歌詞</p>
         <textarea name="content"><%= @post.content %></textarea>
         <p>概要欄</p>
