--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,8 @@
               <%= message %>
             </div>
           <% end %>
+          <p>タイトル</p>
+          <textarea col="20" row="1" name="title"><%= @post.title %></textarea>
           <p>歌詞</p>
           <textarea name="content"><%= @post.content %></textarea>
           <p>概要欄</p>
