--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag    'application', 'posts', 'images', 'movies', 'musics', 'rooms', 'contacts', 'users', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="<%= asset_path('user-tab-script.js') %>"></script>
+    <script src="<%= asset_path('application.js') %>"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -16,18 +16,106 @@
   <body>
     <div class="wrapper">
     <header>
-      <div class="header-logo">
-        <% if @current_user %>
-          <button class="toggle-button">
-            <span class="bar" onclick="location.href='/contacts'">お問い合わせ</span>
-            <span class="bar" onclick="location.href='/riyoukiyaku'">利用規約</span>
-            <span class="bar" onclick="location.href='/puraibasiporisi'">プライバシーポリシー</span>
-          </button>
-          <div class="logo">Wiblu</div>
-        <% else %>
-          <%= link_to("Wiblu", "/") %>
-        <% end %>
+    <div class="header-logo">
+  <% if @current_user %>
+
+  <div class="logo">Wiblu</div>
+  <input type="checkbox" class="checkbox" id="menu">
+  <label for="menu" class="span-container">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
+
+    <nav class="Menu">
+      <div class="CloseButton">
+        <label for="menu" class="CloseButton-Icon">×</label>
       </div>
+      <ul class="Menu-Group">
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="#">
+            <span>v 投稿一覧</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/posts/index">
+            <span>歌詞</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/musics">
+            <span>音楽</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/images">
+            <span>イラスト</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/movies">
+            <span>MV</span>
+          </a>
+        </li>
+        <hr class="Menu-Group-Separator">
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="#">
+            <span>v 新規投稿</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/posts/new">
+            <span>歌詞</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/musics/new">
+            <span>音楽</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/images/new">
+            <span>イラスト</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/movies/new">
+            <span>MV</span>
+          </a>
+        </li>
+        <hr class="Menu-Group-Separator">
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/rooms/index">
+            <span>メッセージ</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/users/index">
+            <span>ユーザー一覧</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/contacts">
+            <span>お問い合わせ</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/riyoukiyaku">
+            <span>利用規約</span>
+          </a>
+        </li>
+        <li class="Menu-Group-Item">
+          <a class="Menu-Group-Item-Link" href="/puraibasiporisi">
+            <span>プライバシーポリシー</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <% else %>
+      <%= link_to("Wiblu", "/") %>
+     <% end %>
+    </div>
+
 
       <ul class="header-menus">
         <% if @current_user %>
@@ -57,65 +145,6 @@
         <%= flash[:notice] %>
       </div>
     <% end %>
-    
-    <% if @current_user %>
-    <div class="side-contents">
-      <aside>
-        <div class="sidebar">
-          <nav class="side-menus">
-            <ul>
-              <li class="font-bold">
-                <a>v 投稿一覧</a>
-              </li>
-              <li>
-                <a href="/posts/index">歌詞</a>
-              </li>
-              <li>
-                <a href="/musics">音楽</a>
-              </li>
-              <li>
-                <a href="/images">イラスト</a>
-              </li>
-              <li>
-                <a href="/movies" >MV</a>
-              </li>
-
-              <li class="font-bold">
-                <a>v 新規投稿</a>
-              </li>
-              <li>
-                <a href="/posts/new">歌詞</a>
-              </li>
-              <li>
-                <a href="/musics/new">音楽</a>
-              </li>
-              <li>
-                <a href="/images/new">イラスト</a>
-              </li>
-              <li class="border-bottom">
-                <a href="/movies/new">MV</a>
-              </li>
-              <li>
-                <a href="/rooms/index">メッセージ</a>
-              </li>
-              <li class="border-bottom">
-                <a href="/users/index">ユーザー一覧</a>
-              </li>
-              <li>
-                <a href="/contacts">お問い合わせ</a>
-              </li>
-              <li>
-                <a href="/riyoukiyaku">利用規約</a>
-              </li>
-              <li>
-                <a href="/puraibasiporisi" class="overflow-ellipsis">プライバシーポリシー</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </aside>
-      <% end %>
-    </div>
     <div class="body-wrapper">
       <%= yield %>
     </div>
