--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,13 +129,13 @@
           </li>
         <% else %>
           <li>
-            <%= link_to("Wibluとは", "/about") %>
+            <%= link_to("Wibluとは", "/") %>
           </li>
           <li>
            <%= link_to("新規登録", "/signup") %>
           </li>
           <li>
-            <%= link_to("ログイン", "/login") %>
+            <%= link_to("ログイン", "/") %>
           </li>
         <% end %>
       </ul>
