--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,7 +129,7 @@
           </li>
         <% else %>
           <li>
-            <%= link_to("Wibluとは", "/") %>
+            <%= link_to("Wibluとは", "/destroy", {method: "post"}) %>
           </li>
           <li>
            <%= link_to("新規登録", "/signup") %>
