--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,6 +124,9 @@
               <img src="<%= "/user_images/#{@current_user.image_name}" %>">
             </div>
           </li>
+                  <li>
+          <%= link_to("アカウント削除", "/destroy", {method: "post"}) %>
+        </li>
           <li>
             <%= link_to("ログアウト", "/logout", {method: "post"}) %>
           </li>
