--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -3,23 +3,23 @@
     <h1 class="form-heading">編集する</h1>
   </div>
 
-  <%= form_tag("/images/#{@image.id}/update") do %>
-    <div class="form">
-      <div class="form-body">
-        <% @image.errors.full_messages.each do |message| %>
-          <div class="form-error">
-            <%= message %>
-          </div>
-        <% end %>
+  <%= form_with(model: @image, url: "/images/#{@image.id}", method: :put) do |form| %>
+  <div class="form">
+    <div class="form-body">
+      <% @image.errors.full_messages.each do |message| %>
+        <div class="form-error">
+          <%= message %>
+        </div>
+      <% end %>
 
-        <%= image_tag(@image.ctype.to_s, :size => "300x200") %>
-        <p>タイトル</p>
-        <textarea name="image_name"><%= @image.image_name %></textarea>
-        <p>概要欄</p>
-        <textarea name="body"><%= @image.body %></textarea>
-        <input type="submit" value="保存">
+      <%= image_tag(@image.ctype.to_s, size: "300x200") %>
+      <p>タイトル</p>
+      <%= form.text_area :image_name %>
+      <p>概要欄</p>
+      <%= form.text_area :body %>
+      <%= form.submit "保存" %>
 
-      </div>
     </div>
-  <% end %>
+  </div>
+<% end %>
 </div>
