--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,15 +126,12 @@
               <% end %>
             </div>
           </li>
-        <li>
-          <%= link_to("アカウント削除", "/destroy", {method: "post"}) %>
-        </li>
           <li>
             <%= link_to("ログアウト", "/logout", {method: "post"}) %>
           </li>
         <% else %>
           <li>
-            <%= link_to("Wibluとは", "/destroy", {method: "post"}) %>
+            <%= link_to("Wibluとは", "/") %>
           </li>
           <li>
            <%= link_to("新規登録", "/signup") %>
