--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -116,3 +116,21 @@
 .form-check-label a {
   color: blue;
 }
+
+.destroy {
+  margin-top: 60px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border: 2px solid #000;
+  color: crimson;
+  border-radius: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.destroy:hover {
+  color: #fff;
+  background: #ff006f;
+}
