--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,29 +177,6 @@ header {
   object-fit: cover;
 }
 
-/* メニューの共通スタイル */
-.Menu {
-  list-style-type: none;
-  padding: 0;
-}
-
-.Menu-Group-Item {
-  margin-bottom: 0;
-}
-
-.Menu-Group-Item-Link {
-  display: block;
-  padding: 0;
-  text-decoration: none;
-  color: #000;
-  font-size: 14px; /* 文字サイズを調整 */
-}
-
-.Menu-Group-Separator{
-  border-top: 1px solid #ccc;
-  padding-top: 0;
-}
-
 /* パソコンの画面幅 */
 @media screen and (min-width: 768px) {
   .checkbox {
@@ -255,9 +232,9 @@ header {
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
   }
-  
+
   .logo {
-    padding-left: 44px;
+    padding-left: 25px;
   }
   
   .span-container,
@@ -265,9 +242,8 @@ header {
     width: 22px;
     height: 22px;
     position: absolute;
-    right: 2rem;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 45%;
+    transform: translateY(-20%);
     color: #000;
   }
   
@@ -284,7 +260,7 @@ header {
     height: 22px;
     cursor: pointer;
     left: 0;
-    margin-left: 10px;
+    margin-left: 20px;
   }
   
   .span-container span {
@@ -297,6 +273,7 @@ header {
 
   .checkbox:checked ~ .Menu {
     display: block;
+    left: 0;
   }
   
   .checkbox:checked ~ .span-container span:nth-last-child(1) {
@@ -313,13 +290,12 @@ header {
   }
   
   .Menu-Group {
-    list-style-type: none;
-    padding: 0;
+    padding: 30px;
     margin: 0;
   }
   
   .Menu-Group-Item {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
   
   .Menu-Group-Item-Link {
@@ -335,15 +311,16 @@ header {
   .Menu-Group-Separator {
     margin: 1rem 0;
     border: none;
-    border-top: 1px solid white;
+    border-top: 1px solid #dddd;
   }
   
   .Menu {
+    position: absolute;
     display: none;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
@@ -355,19 +332,16 @@ header {
   }
 
   .CloseButton {
-    position: absolute;
-    padding: 1rem;
-    left: 1rem;
+    padding-left: 20px;
+    padding-top: 30px;
   }
   
   .CloseButton-Icon {
-    color: white;
-    font-size: 2rem;
+    color: black;
+    font-size: 4rem;
     cursor: pointer;
   }
-
 }
-
 
  /* フォーム================================ */
  .form {
