--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,6 +122,14 @@
         <ul class="header-menus">
           <% if @current_user %>
             <li>
+              <div class="search-form">
+                <%= form_with url: "/search", method: :get, local: true, class: "search-form" do |f| %>
+                  <%= f.text_field :keyword, value: @keyword, placeholder: "キーワードを入力してください" %>
+                  <%= f.submit "検索" %>
+                <% end %>
+              </div>  
+            </li>
+            <li>
               <div class="header-icon">
                 <%= link_to("/users/#{@current_user.id}") do %>
                   <img src="<%= "/user_images/#{ERB::Util.html_escape(@current_user.image_name)}" %>">
