--- a/app/views/home/riyoukiyaku.html.erb
+++ b/app/views/home/riyoukiyaku.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
-<h1>【サービス名】利用規約</h1>
+<h1>【Wiblu】利用規約</h1>
 
-<p>この利用規約（以下、「本規約」といいます。）は、【サービス名】（以下、「当サービス」といいます。）の利用条件を定めるものです。当サービスを利用される場合は、本規約に同意するものとします。</p>
+<p>この利用規約（以下、「本規約」といいます。）は、【Wiblu】（以下、「当サービス」といいます。）の利用条件を定めるものです。当サービスを利用される場合は、本規約に同意するものとします。</p>
 
 <h2>第1条（利用者）</h2>
 
