--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,26 +10,20 @@
       <% end %>
 
       <div class="user-in">
-      <% unless @user.id == @current_user.id %>
-        <% if @is_room == true %>
-          <%= link_to("メッセージへ", room_path(@room_id)) %>
-        <% else %>
-          <%= form_for @room do |f| %>
-            <%= fields_for @entry do |e| %>
-              <% e.hidden_field :user_id, value: @user.id %>
+        <% unless @user.id == @current_user.id %>
+          <% if @is_room == true %>
+            <%= link_to("メッセージへ", room_path(@room_id), class: "btn btn--orange btn-c") %>
+          <% else %>
+            <%= form_for @room do |f| %>
+              <%= fields_for @entry do |e| %>
+                <%= e.hidden_field :user_id, value: @user.id %>
+              <% end %>
+              <%= f.button "<i class='fa fas fa-envelope'></i>メッセージを送る".html_safe, class: "btn btn--orange btn-c", type: :submit %>
             <% end %>
-            <%= f.button "メッセージを送る", type: :submit %>
           <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
-    
-    </div>
-    
-    <ul class="user-tabs">
-      <li><%= link_to("投稿", "/users/#{@user.id}") %></li>
-      <li class="active"><%= link_to("いいね!", "/users/#{@user.id}/likes") %></li>
-    </ul>
 
     <ul class="user-tabs">
       <li class="active"><a href="#tab1">歌詞</a></li>
@@ -49,15 +43,20 @@
               <%= link_to(post.user.name, "/users/#{post.user.id}") %>
             </div>
             <div class="post-content">
-              <%= link_to(post.content, "/posts/#{post.id}") %>
+              <div>
+                <%= link_to(post.title, "/posts/#{post.id}") %>
+              </div>
+              <div>
+                <%= link_to(post.content, "/posts/#{post.id}") %>
+              </div>
             </div>
             <div class="post-like">
               <% if Like.find_by(user_id: @current_user.id, post_id: post.id) %>
-                <%= link_to("/likes/#{post.id}/destroy", method: :post) do %>
+                <%= link_to("/likes/#{post.id}/destroy", method: :post, class: "like-button", remote: true) do %>
                   <span class="fa fa-heart liked-btn"></span>
                 <% end %>
               <% else %>
-                <%= link_to("/likes/#{post.id}/create", method: :post) do %>
+                <%= link_to("/likes/#{post.id}/create", method: :post, class: "unlike-button", remote: true) do %>
                   <span class="fa fa-heart unliked-btn"></span>
                 <% end %>
               <% end %>
