--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,10 +127,13 @@
         <ul class="header-menus">
           <% if @current_user %>
             <li>
-              <div class="search">
-              <%= form_with url: "/search", method: :get, local: true, class: "search-form" do |f| %>
-                <%= f.text_field :keyword, value: @keyword, placeholder: "検索 ..." %>
-              <% end %>
+              <div class="search" id="search-container">
+                <i id="search-icon" class="fa fa-search"></i>
+                  <div class="search-form">
+                    <%= form_with url: "/search", method: :get, local: true do |f| %>
+                      <%= f.text_field :keyword, value: @keyword, placeholder: "検索 ...", class: "search-input" %>
+                    <% end %>
+                  </div>
               </div>
             </li>
             <li>
