--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
               <%= link_to(post.user.name, "/users/#{post.user.id}") %>
             </div>
             <div class="post-content">
-              <div>
+              <div class="post-title">
                 <%= link_to(post.title, "/posts/#{post.id}") %>
               </div>
               <div>
