--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
           </div>
         </div>
         <div class="post-content">
-          <div>
+          <div class="post-title">
             <%= link_to(post.title, "/posts/#{post.id}") %>
           </div>
           <div>
