--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
         <div class="header-logo">
           <% if @current_user %>
 
-          <div class="logo">Wiblu</div>
+          　　<div class="logo">
+            　　<a href="https://wiblu-blog.net">
+             　　 Wiblu
+            　　</a>
+          　　</div>
           <input type="checkbox" class="checkbox" id="menu">
           <label for="menu" class="span-container">
             <span></span>
@@ -119,7 +123,11 @@
             </ul>
           </nav>
           <% else %>
-            <%= link_to("Wiblu", "/") %>
+          　　<div class="logo">
+            　　<a href="https://wiblu-blog.net">
+             　　 Wiblu
+            　　</a>
+          　　</div>
           <% end %>
         </div>
 
