--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,9 @@
         <div class="header-logo">
           <% if @current_user %>
 
-          　　<div class="logo">
-            　　<a href="https://wiblu-blog.net">
-             　　 Wiblu
-            　　</a>
-          　　</div>
+          　<div class="logo">
+             <%= link_to("Wiblu", "https://wiblu-blog.net" %>
+          　</div>
           <input type="checkbox" class="checkbox" id="menu">
           <label for="menu" class="span-container">
             <span></span>
@@ -124,9 +122,7 @@
           </nav>
           <% else %>
           　　<div class="logo">
-            　　<a href="https://wiblu-blog.net">
-             　　 Wiblu
-            　　</a>
+               <%= link=to("Wiblu", "https://wiblu-blog.net") %>
           　　</div>
           <% end %>
         </div>
