--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <% if @current_user %>
 
           　<div class="logo">
-             <%= link_to("Wiblu", "https://wiblu-blog.net" %>
+             <%= link_to("Wiblu", "https://wiblu-blog.net")%>
           　</div>
           <input type="checkbox" class="checkbox" id="menu">
           <label for="menu" class="span-container">
