--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -28,7 +28,7 @@
           <%= f.text_field :body, :size => 30 %>
 
         <%= f.label :概要欄 %>
-          <%= f.text_field :content, :size => 300 %>
+          <%= f.text_area :content, :size => 300 %>
 
         <%= f.submit "投稿" %>
       <% end %>
